--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
     </div>
 </body>
 
+<script src="script.js"></script>
 
 <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
