Toggle icon color change onclick

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         navLinks.style.maxHeight = '0px';
                         navbar.style.backgroundColor = 'transparent'
                         toggleIcon.style.rotate = '0deg'
+                        icon.style.color = 'magenta'
                     })
                 })
 
