--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
                         <li>C++</li>
                         <li>Java</li>
                         <li>Python</li>
-                        <li>MySQL</li>
                     </h3>
                 </div>
 
@@ -160,7 +159,7 @@
                         <img src="zenfluence.png" alt="Zenfluence">
                         <div class="project-content">
                             <h3>Zenfluence Marketing</h3>
-                            <p>creative marketing agency helping brands grow through smart strategy and bold execution.
+                            <p>Creative marketing agency helping brands grow through smart strategy and bold execution.
                             </p>
                             <div class="tech-stack">
                                 <span>HTML</span><span>CSS</span><span>JavaScript</span>
@@ -227,7 +226,7 @@
                         <img src="notesapp.png" alt="Notes App">
                         <div class="project-content">
                             <h3>Notes Web App</h3>
-                            <p>A minimal notes app to jot down ideas, reminders, and to-dos anytime.</p>
+                            <p>A minimal notes app to not down ideas, reminders, and to-dos anytime.</p>
                             <div class="tech-stack">
                                 <span>HTML</span><span>CSS</span><span>JavaScript</span>
                             </div>
