--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <li>React JS</li>
                     </h3>
                     <!-- <h3>git <br>GitHub <br>GitLab</h3> -->
-                    <h3>Languages
+                    <h3 id="language">Languages
                         <li>C</li>
                         <li>C++</li>
                         <li>Java</li>
